Google Maps API Added

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
   <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+  <script async
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyByZH8Kl7yi2kSobGMSsh6daGdmYDZc3q0&libraries=places&callback=initMap"></script>
 </body>
 
 </html>
