--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
-  <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
-  <script async
+  <script async defer src="https://checkout.razorpay.com/v1/checkout.js"></script>
+  <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyByZH8Kl7yi2kSobGMSsh6daGdmYDZc3q0&libraries=places&callback=initMap"></script>
 </body>
 
